Add exports for standalone test environment (#362)
Issue #225 migrated OpenJCEPlus and associated tests to use the
sun.security.util.Debug class. Two export statements were not
included for cases where the tests are being executed in a standalone
test environment where the provider is already bundled with the SDK.

Signed-off-by: Jason Katonica <katonica@us.ibm.com>